--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./scss/game.scss">
 </head>
 <body>
-    <script src="./ts/index.ts"></script>
+    <script type="module" src="./ts/index.ts"></script>
 </body>
 </html>
 
