--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <script type="module" src="./ts/index.ts"></script>
+    <div class="gamePlace">
+
+    </div>
+    <button type="button" class="firstInteraction">Load</button>
+    <p class="info">First interaction for audio turn on.</p>
 </body>
 </html>
 
